--- a/FillableForms/Content/bootstrap.css
+++ b/FillableForms/Content/bootstrap.css
@@ -2640,8 +2640,7 @@ input[type="range"] {
 }
 select[multiple],
 select[size] {
-  height: 143px;
-    width: 374px;
+  height: auto;
 }
 input[type="file"]:focus,
 input[type="radio"]:focus,
